Fix horizontal scrollbar on small screen

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -5,4 +5,5 @@
   margin-right: -22px;
   margin-bottom: -22px;
   padding: 22px;
+  position: relative;
 }
